# new-mguard

./: .gitignore  .gitmodules  A.cert  A.ndncsr  CMakeLists.txt  README.md  VagrantFile  Vagrantfile  abc.py  attribute_mapping_table.info  default.policy  example.csv  logger.hpp  lookup.db  mguard.pc.in  ndn-python-repo.conf  parser_output  patch  quick_examples.sh  quick_install.sh  runner.sh  sub.p  test.db  wscript
.waf-tools/: default-compiler-flags.py
Experiments/minindn_experiments/: abc.py  one-producer-one-consumer.py
abe-helper/: abe-helper.cpp  wscript
certs/: A.cert  A.ndncsr  B.cert  C.cert  D.cert  E.cert  a.cert  aa.cert  aa.ndncsr  b.cert  c.cert  controller.cert  controller.ndncsr  create_certs.sh  create_default_certs.sh  d.cert  e.cert  f.cert  local.cert  local.ndncsr  md2k-trust-anchor.ndncert  producer.cert  trust-schema.conf
certs/.ndn/: pib.db
controller/: controller.cpp  controller.hpp  main.cpp_bkp  parser.cpp  parser.hpp  wscript
data/: org-md2k-mguard-dd40c-phone-gps.csv
data-generator/: 1_ndn--org--md2k--mguard--dd40c--phone--battery  battery_stream_name.csv  generator.py  main.py
docs/: Copy of mGuard .drawio  Untitled Diagram.drawio  latest mGuard .drawio  mGuard .drawio
examples/: consumer.cpp  consumerApp.cpp  controllerApp.cpp  main.cc.bkp  producerApp.cpp  wscript
experiments/minindn_experiments/: experiment.py  starts
experiments/topologies/: testbed.conf  two-node.conf
mguard/: dataWindowParameter.cpp  dataWindowParameter.h  main.cpp  parser.cpp  parser.hpp  repo-inserter.cpp
mguard/server/: common.hpp  data-adapter.cpp  data-adapter.hpp  file-processor.cpp  file-processor.hpp  pre-processor.cpp  pre-processor.hpp  producer.cpp  producer.hpp  publisher.cpp  publisher.hpp
mguard/user/: consumer.cpp  consumer.hpp  subscriber.hpp
policies/: available_streams  policy1  policy2  policy3  policy4  policy5  policy6  policy7  policy_specification.md  policy_specification.rst
policies/unused/: policy1_only_work
safebag/: A.sb  B.sb  C.sb  D.sb  E.sb  aa.sb  controller.sb  producer.sb
sandbox/: sandbox.cpp
src/: common.hpp  main.cpp
src/UI/: my_file.txt  mywindow.cpp  mywindow.cpp.bkp  mywindow.hpp  tabsbox.glade  ui.cc  ui.cpp.bkp
src/controller/: controller.cpp  controller.hpp  parser.cpp  parser.hpp
src/server/: common.hpp  data-adapter.cpp  data-adapter.hpp  (+4 more)
tests/: CMakeLists.txt  boost-test.hpp  clock-fixture.cpp  clock-fixture.hpp  data-adapter.t.cpp  global-configuration.cpp  identity-management-fixture.cpp  identity-management-fixture.hpp  identity-time-fixture.hpp  io-fixture.hpp  main.cpp  pre-processor.t.cpp  test-common.hpp  unit-test-time-fixture.hpp  wscript
tmp-storage/: generator.py  main.py  main2.py
(+123 files in other folders)
